Fixed bug that did not allow comment bubble to collapse. The css line body height: 100vh was the culprit

--- a/src/App_backup1.css
+++ b/src/App_backup1.css
@@ -1,5 +1,5 @@
 /* "height: 100vh" may be overspecified */ 
-html {
+html, body {
   height: 100vh;  
 }
 
